[gd_scene load_steps=53 format=3 uid="uid://bky3hgsc8hy2u"]

[ext_resource type="Script" path="res://Scenes/Player_Systems/bp_player.gd" id="1_pxims"]
[ext_resource type="Texture2D" uid="uid://ogpf7vucv8qj" path="res://Graphics/Characters/Locked_Character_1x.png" id="1_vbeck"]
[ext_resource type="Texture2D" uid="uid://t8k3v2qmoxic" path="res://Graphics/UI/CD_Overlay_SM_4x.png" id="2_ni0cl"]
[ext_resource type="PackedScene" uid="uid://bg8sq66oyqmc1" path="res://Scenes/Player_Systems/HUD/Health_Heart.tscn" id="3_81pjb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_343pl"]
radius = 5.0

[sub_resource type="AtlasTexture" id="AtlasTexture_hqi1c"]
atlas = ExtResource("2_ni0cl")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1lx7"]
atlas = ExtResource("2_ni0cl")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_87aq8"]
atlas = ExtResource("2_ni0cl")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjxsg"]
atlas = ExtResource("2_ni0cl")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2w8q"]
atlas = ExtResource("2_ni0cl")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7r3h"]
atlas = ExtResource("2_ni0cl")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kumw5"]
atlas = ExtResource("2_ni0cl")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob0as"]
atlas = ExtResource("2_ni0cl")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_65kdk"]
atlas = ExtResource("2_ni0cl")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_estmb"]
atlas = ExtResource("2_ni0cl")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2hqt"]
atlas = ExtResource("2_ni0cl")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6lqb"]
atlas = ExtResource("2_ni0cl")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wiy0n"]
atlas = ExtResource("2_ni0cl")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve5hw"]
atlas = ExtResource("2_ni0cl")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tns4"]
atlas = ExtResource("2_ni0cl")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6cwq"]
atlas = ExtResource("2_ni0cl")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpgs5"]
atlas = ExtResource("2_ni0cl")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfj5c"]
atlas = ExtResource("2_ni0cl")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hw0so"]
atlas = ExtResource("2_ni0cl")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b03op"]
atlas = ExtResource("2_ni0cl")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5ktc"]
atlas = ExtResource("2_ni0cl")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kg2jx"]
atlas = ExtResource("2_ni0cl")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4dgi"]
atlas = ExtResource("2_ni0cl")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t7k1"]
atlas = ExtResource("2_ni0cl")
region = Rect2(0, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0um0g"]
atlas = ExtResource("2_ni0cl")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_57x20"]
atlas = ExtResource("2_ni0cl")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucggp"]
atlas = ExtResource("2_ni0cl")
region = Rect2(192, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxvre"]
atlas = ExtResource("2_ni0cl")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2t1b"]
atlas = ExtResource("2_ni0cl")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yscbn"]
atlas = ExtResource("2_ni0cl")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cso14"]
atlas = ExtResource("2_ni0cl")
region = Rect2(192, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwcw8"]
atlas = ExtResource("2_ni0cl")
region = Rect2(0, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7igfd"]
atlas = ExtResource("2_ni0cl")
region = Rect2(64, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf0ju"]
atlas = ExtResource("2_ni0cl")
region = Rect2(128, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5yb5"]
atlas = ExtResource("2_ni0cl")
region = Rect2(192, 512, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_scu0m"]
atlas = ExtResource("2_ni0cl")
region = Rect2(0, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tlgc"]
atlas = ExtResource("2_ni0cl")
region = Rect2(64, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fl83"]
atlas = ExtResource("2_ni0cl")
region = Rect2(128, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkef4"]
atlas = ExtResource("2_ni0cl")
region = Rect2(192, 576, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xny6"]
atlas = ExtResource("2_ni0cl")
region = Rect2(0, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2uso"]
atlas = ExtResource("2_ni0cl")
region = Rect2(64, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyu0x"]
atlas = ExtResource("2_ni0cl")
region = Rect2(128, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3ci3"]
atlas = ExtResource("2_ni0cl")
region = Rect2(192, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jcdd"]
atlas = ExtResource("2_ni0cl")
region = Rect2(0, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_anq5p"]
atlas = ExtResource("2_ni0cl")
region = Rect2(64, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ookx0"]
atlas = ExtResource("2_ni0cl")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_0b56a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqi1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1lx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87aq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjxsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2w8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7r3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kumw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob0as")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65kdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_estmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2hqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6lqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wiy0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve5hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tns4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6cwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpgs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfj5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hw0so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b03op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5ktc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kg2jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4dgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t7k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0um0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57x20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucggp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxvre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2t1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yscbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cso14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwcw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7igfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf0ju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5yb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scu0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tlgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fl83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkef4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xny6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2uso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyu0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3ci3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jcdd")
}, {
"duration": 0.01,
"texture": SubResource("AtlasTexture_anq5p")
}],
"loop": false,
"name": &"COOLDOWN",
"speed": 45.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ookx0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="Control"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 100.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_pxims")

[node name="CB2D_Character_Placeholder" type="CharacterBody2D" parent="."]
position = Vector2(60, 60)
motion_mode = 1

[node name="S2D_Character" type="Sprite2D" parent="CB2D_Character_Placeholder"]
texture = ExtResource("1_vbeck")

[node name="CS_Hitbox" type="CollisionShape2D" parent="CB2D_Character_Placeholder"]
texture_filter = 1
shape = SubResource("CircleShape2D_343pl")

[node name="MC_Character_UI" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VB_CharacterUI" type="VBoxContainer" parent="MC_Character_UI"]
layout_mode = 2

[node name="VF_Hearts" type="VFlowContainer" parent="MC_Character_UI/VB_CharacterUI"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/h_separation = -2
theme_override_constants/v_separation = -2
alignment = 1
reverse_fill = true

[node name="TR_Heart" parent="MC_Character_UI/VB_CharacterUI/VF_Hearts" instance=ExtResource("3_81pjb")]
layout_mode = 2

[node name="TR_Heart2" parent="MC_Character_UI/VB_CharacterUI/VF_Hearts" instance=ExtResource("3_81pjb")]
layout_mode = 2

[node name="TR_Heart3" parent="MC_Character_UI/VB_CharacterUI/VF_Hearts" instance=ExtResource("3_81pjb")]
layout_mode = 2

[node name="MC_Cooldowns" type="MarginContainer" parent="MC_Character_UI/VB_CharacterUI"]
layout_mode = 2
theme_override_constants/margin_left = 21
theme_override_constants/margin_right = 21

[node name="HB_Cooldowns" type="HBoxContainer" parent="MC_Character_UI/VB_CharacterUI/MC_Cooldowns"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_vertical = 8

[node name="PC_CD1" type="PanelContainer" parent="MC_Character_UI/VB_CharacterUI/MC_Cooldowns/HB_Cooldowns"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="CC_CD1" type="CenterContainer" parent="MC_Character_UI/VB_CharacterUI/MC_Cooldowns/HB_Cooldowns/PC_CD1"]
layout_mode = 2

[node name="S2D_AB1_ICON" type="Sprite2D" parent="MC_Character_UI/VB_CharacterUI/MC_Cooldowns/HB_Cooldowns/PC_CD1/CC_CD1"]
unique_name_in_owner = true

[node name="S2D_CD1" type="AnimatedSprite2D" parent="MC_Character_UI/VB_CharacterUI/MC_Cooldowns/HB_Cooldowns/PC_CD1/CC_CD1"]
unique_name_in_owner = true
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_0b56a")

[node name="PC_CD2" type="PanelContainer" parent="MC_Character_UI/VB_CharacterUI/MC_Cooldowns/HB_Cooldowns"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="CC_CD2" type="CenterContainer" parent="MC_Character_UI/VB_CharacterUI/MC_Cooldowns/HB_Cooldowns/PC_CD2"]
layout_mode = 2

[node name="S2D_AB2_ICON" type="Sprite2D" parent="MC_Character_UI/VB_CharacterUI/MC_Cooldowns/HB_Cooldowns/PC_CD2/CC_CD2"]
unique_name_in_owner = true

[node name="S2D_CD2" type="AnimatedSprite2D" parent="MC_Character_UI/VB_CharacterUI/MC_Cooldowns/HB_Cooldowns/PC_CD2/CC_CD2"]
unique_name_in_owner = true
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_0b56a")

[node name="PC_CD3" type="PanelContainer" parent="MC_Character_UI/VB_CharacterUI/MC_Cooldowns/HB_Cooldowns"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="CC_CD3" type="CenterContainer" parent="MC_Character_UI/VB_CharacterUI/MC_Cooldowns/HB_Cooldowns/PC_CD3"]
layout_mode = 2

[node name="S2D_AB3_ICON" type="Sprite2D" parent="MC_Character_UI/VB_CharacterUI/MC_Cooldowns/HB_Cooldowns/PC_CD3/CC_CD3"]
unique_name_in_owner = true

[node name="S2D_CD3" type="AnimatedSprite2D" parent="MC_Character_UI/VB_CharacterUI/MC_Cooldowns/HB_Cooldowns/PC_CD3/CC_CD3"]
unique_name_in_owner = true
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_0b56a")

[node name="PC_CD4" type="PanelContainer" parent="MC_Character_UI/VB_CharacterUI/MC_Cooldowns/HB_Cooldowns"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="CC_CD4" type="CenterContainer" parent="MC_Character_UI/VB_CharacterUI/MC_Cooldowns/HB_Cooldowns/PC_CD4"]
layout_mode = 2

[node name="S2D_AB4_ICON" type="Sprite2D" parent="MC_Character_UI/VB_CharacterUI/MC_Cooldowns/HB_Cooldowns/PC_CD4/CC_CD4"]
unique_name_in_owner = true

[node name="S2D_CD4" type="AnimatedSprite2D" parent="MC_Character_UI/VB_CharacterUI/MC_Cooldowns/HB_Cooldowns/PC_CD4/CC_CD4"]
unique_name_in_owner = true
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_0b56a")

[node name="CD_ATK1" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="CD_ATK2" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="CD_ATK3" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="CD_DEF" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="CD_ATK1" to="." method="_on_cd_atk_1_timeout"]
[connection signal="timeout" from="CD_ATK2" to="." method="_on_cd_atk_2_timeout"]
[connection signal="timeout" from="CD_ATK3" to="." method="_on_cd_atk_3_timeout"]
[connection signal="timeout" from="CD_DEF" to="." method="_on_cd_def_timeout"]
